@@ -98,7 +98,10 @@ class DistURL:
 
     @property
     def pkgname_and_version(self):
-        return splitbasename(self.basename, suffix=True)[:2]
+        name, version = splitbasename(self.basename, suffix=True)[:2]
+        name = pkg_resources.Requirement.parse(name).project_name
+        return name, version
+
 
     @property
     def easyversion(self):
