@@ -47,6 +47,8 @@ class TestDistURL:
     def test_versionapi(self):
         url = DistURL("http://a/py-1.0.tar.gz")
         assert url.pkgname_and_version == ("py", "1.0")
+        url = DistURL("http://a/py_some-1.0.tar.gz")
+        assert url.pkgname_and_version == ("py-some", "1.0")
 
     def test_easyversion_comparison(self):
         url1 = DistURL("http://a/py-1.0.tar.gz")
