@@ -1,6 +1,9 @@
 next version
 ----------------
 
+- fix name mangling issue for pypi-cache: "project_name*" is now matched
+  correctly when a lookup for "project-name" happens.
+
 - fix issue22: don't bypass CDN by default, rather provide an
   "--bypass-cdn" option to do it (in case you have cache-invalidation troubles)
 
@@ -11,7 +14,8 @@ next version
   through tox.
 
 - inheritance cleanup: inherited versions for a project are now shadowed
-  and not shown anymore with getreleaselinks() or in +simple pages.
+  and not shown anymore with getreleaselinks() or in +simple pages
+  if the "basename" is exactly shadowed.
 
 - fix issue16: enrich projectconfig json with a "+shadow" file which
   lists shadowed "versions"
